--- a/assets/package.json
+++ b/assets/package.json
@@ -12,7 +12,8 @@
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "popper.js": "^1.15.0",
-    "save": "^2.4.0"
+    "save": "^2.4.0",
+    "serialize-javascript": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
